--- a/style.css
+++ b/style.css
@@ -2,6 +2,32 @@ html{
     /* font-size: 20px; */
 }
 
+body{
+    /* background-color : honeydew; */
+    /* margin:0px; */
+}
+
+header{
+    background-color : lightgreen;
+    padding-left: 8px;
+    padding-top:8px;
+    /* font-family: sans-serif; */
+}
+
+h1{
+    font-family: sans-serif;
+    line-height:1.3;
+}
+
+main{
+    padding-left:8px;
+    line-height:1.2;
+}
+
+address{
+    font-family: sans-serif;
+}
+
 a{
     color : DarkBlue;
 }
